Flip Shop Card on Click Mobile

--- a/index.html
+++ b/index.html
@@ -370,76 +370,68 @@
       <div class="testimonials-section-container-inner">
         <div class="flip-card-container">
           <!-- Card 1 -->
-          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./images/shop-card01-front.webp" alt="GTA T-Shirt front" />
-                </div>
-                <div class="flip-card-back">
-                  <img src="./images/shop-card01-back.webp" alt="GTA T-Shirt back" />
-                </div>
+          <div class="flip-card" onclick="toggleFlip(this)">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="./images/shop-card01-front.webp" alt="GTA T-Shirt front" />
               </div>
-              <div class="product-info">
-                <div class="product-name">GTA T-Shirt</div>
-                <div class="product-price">FROM €15</div>
+              <div class="flip-card-back">
+                <img src="./images/shop-card01-back.webp" alt="GTA T-Shirt back" />
               </div>
             </div>
-          </a>
+            <div class="product-info">
+              <div class="product-name">GTA T-Shirt</div>
+              <div class="product-price">FROM €15</div>
+            </div>
+          </div>
 
           <!-- Card 2 -->
-          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt  front" />
-                </div>
-                <div class="flip-card-back">
-                  <img src="./images/shop-card02-back.webp" alt="GTA Sweatshirt back" />
-                </div>
+          <div class="flip-card" onclick="toggleFlip(this)">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt  front" />
               </div>
-              <div class="product-info">
-                <div class="product-name">GTA Sweatshirt</div>
-                <div class="product-price">FROM €28</div>
+              <div class="flip-card-back">
+                <img src="./images/shop-card02-back.webp" alt="GTA Sweatshirt back" />
               </div>
             </div>
-          </a>
+            <div class="product-info">
+              <div class="product-name">GTA Sweatshirt</div>
+              <div class="product-price">FROM €28</div>
+            </div>
+          </div>
 
           <!-- Card 3 -->
-          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./images/shop-card03-front.webp" alt="GTA Hoodie  front" />
-                </div>
-                <div class="flip-card-back">
-                  <img src="/images/shop-card03-back.webp" alt="GTA Hoodie back" />
-                </div>
+          <div class="flip-card" onclick="toggleFlip(this)">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="./images/shop-card03-front.webp" alt="GTA Hoodie  front" />
               </div>
-              <div class="product-info">
-                <div class="product-name">GTA Hoodie</div>
-                <div class="product-price">FROM €25</div>
+              <div class="flip-card-back">
+                <img src="/images/shop-card03-back.webp" alt="GTA Hoodie back" />
               </div>
             </div>
-          </a>
+            <div class="product-info">
+              <div class="product-name">GTA Hoodie</div>
+              <div class="product-price">FROM €25</div>
+            </div>
+          </div>
 
           <!-- Card 4 -->
-          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <img src="./images/shop-card04-front.webp" alt="GTA 1/4 Zip front" />
-                </div>
-                <div class="flip-card-back">
-                  <img src="/images/shop-card04-back.webp" alt="GTA 1/4 Zip" />
-                </div>
+          <div class="flip-card" onclick="toggleFlip(this)">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="./images/shop-card04-front.webp" alt="GTA 1/4 Zip front" />
               </div>
-              <div class="product-info">
-                <div class="product-name">GTA 1/4 Zip</div>
-                <div class="product-price">FROM €25</div>
+              <div class="flip-card-back">
+                <img src="/images/shop-card04-back.webp" alt="GTA 1/4 Zip" />
               </div>
             </div>
-          </a>
+            <div class="product-info">
+              <div class="product-name">GTA 1/4 Zip</div>
+              <div class="product-price">FROM €25</div>
+            </div>
+          </div>
         </div>
       </div>
 
