--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <div class="flip-card" onclick="toggleFlip(this)">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt  front" />
+                <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt front" />
               </div>
               <div class="flip-card-back">
                 <img src="./images/shop-card02-back.webp" alt="GTA Sweatshirt back" />
@@ -405,10 +405,10 @@
           <div class="flip-card" onclick="toggleFlip(this)">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="./images/shop-card03-front.webp" alt="GTA Hoodie  front" />
+                <img src="./images/shop-card03-front.webp" alt="GTA Hoodie front" />
               </div>
               <div class="flip-card-back">
-                <img src="/images/shop-card03-back.webp" alt="GTA Hoodie back" />
+                <img src="./images/shop-card03-back.webp" alt="GTA Hoodie back" />
               </div>
             </div>
             <div class="product-info">
@@ -424,7 +424,7 @@
                 <img src="./images/shop-card04-front.webp" alt="GTA 1/4 Zip front" />
               </div>
               <div class="flip-card-back">
-                <img src="/images/shop-card04-back.webp" alt="GTA 1/4 Zip" />
+                <img src="./images/shop-card04-back.webp" alt="GTA 1/4 Zip back" />
               </div>
             </div>
             <div class="product-info">
