--- a/index.html
+++ b/index.html
@@ -364,80 +364,87 @@
       </div>
     </section>
 
-    <!-- Shop Section -->
-    <section class="shop-section-container-outer" id="shop">
-      <h2>GTA Store</h2>
-      <div class="testimonials-section-container-inner">
-        <div class="flip-card-container">
-          <!-- Card 1 -->
-          <div class="flip-card" onclick="toggleFlip(this)">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="./images/shop-card01-front.webp" alt="GTA T-Shirt front" />
-              </div>
-              <div class="flip-card-back">
-                <img src="./images/shop-card01-back.webp" alt="GTA T-Shirt back" />
-              </div>
-            </div>
-            <div class="product-info">
-              <div class="product-name">GTA T-Shirt</div>
-              <div class="product-price">FROM €15</div>
-            </div>
+ <!-- Shop Section -->
+ <section class="shop-section-container-outer" id="shop">
+  <h2>GTA Store</h2>
+  <div class="testimonials-section-container-inner">
+    <div class="flip-card-container">
+      <!-- Card 1 -->
+      <div class="flip-card" onclick="toggleFlip(this)">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./images/shop-card01-front.webp" alt="GTA T-Shirt front" />
           </div>
-
-          <!-- Card 2 -->
-          <div class="flip-card" onclick="toggleFlip(this)">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt front" />
-              </div>
-              <div class="flip-card-back">
-                <img src="./images/shop-card02-back.webp" alt="GTA Sweatshirt back" />
-              </div>
-            </div>
-            <div class="product-info">
-              <div class="product-name">GTA Sweatshirt</div>
-              <div class="product-price">FROM €28</div>
-            </div>
+          <div class="flip-card-back">
+            <img src="./images/shop-card01-back.webp" alt="GTA T-Shirt back" />
           </div>
-
-          <!-- Card 3 -->
-          <div class="flip-card" onclick="toggleFlip(this)">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="./images/shop-card03-front.webp" alt="GTA Hoodie front" />
-              </div>
-              <div class="flip-card-back">
-                <img src="./images/shop-card03-back.webp" alt="GTA Hoodie back" />
-              </div>
-            </div>
-            <div class="product-info">
-              <div class="product-name">GTA Hoodie</div>
-              <div class="product-price">FROM €25</div>
-            </div>
-          </div>
-
-          <!-- Card 4 -->
-          <div class="flip-card" onclick="toggleFlip(this)">
-            <div class="flip-card-inner">
-              <div class="flip-card-front">
-                <img src="./images/shop-card04-front.webp" alt="GTA 1/4 Zip front" />
-              </div>
-              <div class="flip-card-back">
-                <img src="./images/shop-card04-back.webp" alt="GTA 1/4 Zip back" />
-              </div>
-            </div>
-            <div class="product-info">
-              <div class="product-name">GTA 1/4 Zip</div>
-              <div class="product-price">FROM €25</div>
-            </div>
-          </div>
+        </div>
+        <div class="product-info">
+          <div class="product-name">GTA T-Shirt</div>
+          <div class="product-price">FROM €15</div>
         </div>
       </div>
 
-      <div class="cta-wrap draw-border">
-        <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank" class="cta cta-1-contact-us"> Shop Now</a>
+      <!-- Card 2 -->
+      <div class="flip-card" onclick="toggleFlip(this)">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt front" />
+          </div>
+          <div class="flip-card-back">
+            <img src="./images/shop-card02-back.webp" alt="GTA Sweatshirt back" />
+          </div>
+        </div>
+        <div class="product-info">
+          <div class="product-name">GTA Sweatshirt</div>
+          <div class="product-price">FROM €28</div>
+        </div>
       </div>
+
+      <!-- Card 3 -->
+      <div class="flip-card" onclick="toggleFlip(this)">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./images/shop-card03-front.webp" alt="GTA Hoodie front" />
+          </div>
+          <div class="flip-card-back">
+            <img src="./images/shop-card03-back.webp" alt="GTA Hoodie back" />
+          </div>
+        </div>
+        <div class="product-info">
+          <div class="product-name">GTA Hoodie</div>
+          <div class="product-price">FROM €25</div>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="flip-card" onclick="toggleFlip(this)">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="./images/shop-card04-front.webp" alt="GTA 1/4 Zip front" />
+          </div>
+          <div class="flip-card-back">
+            <img src="./images/shop-card04-back.webp" alt="GTA 1/4 Zip back" />
+          </div>
+        </div>
+        <div class="product-info">
+          <div class="product-name">GTA 1/4 Zip</div>
+          <div class="product-price">FROM €25</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="cta-wrap draw-border">
+    <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank" class="cta cta-1-contact-us"> Shop Now</a>
+  </div>
+
+  <div class="shape-divider-bottom">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+      <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-3"></path>
+    </svg>
+  </div>
+</section>
 
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
