--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
   </div>
 
   <div class="cta-wrap draw-border">
-    <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank" class="cta cta-1-contact-us"> Shop Now</a>
+    <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank" class="cta cta-3-shop-now"> Shop Now</a>
   </div>
 
   <div class="shape-divider-bottom">
