Adding FAQ's to the BJJ page

--- a/bjj.html
+++ b/bjj.html
@@ -186,7 +186,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Brazilian Jiu-Jitsu at Golden Tiger Academy in Dunboyne. Our expert instructors offer classes for all ages and levels, from beginners to advanced practitioners. Whether you're a kid, fitness enthusiast, or self-defense seeker, join us to unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
     <title>Top Brazilian Jiu-Jitsu (BJJ) Classes and Training</title>
@@ -330,6 +330,66 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section-container-outer" id="faqs">
+      <h2>FAQ's</h2>
+      <div class="faq-section-container-inner">
+        <ul class="accordion">
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
+              <span class="question-title">What should I expect in my first BJJ class?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span> In your first class, you'll focus on basic techniques and movements without sparring. It's a friendly, beginner-friendly environment where you can learn at your own pace. No prior experience or special uniform (gi) is required—just wear comfortable gym clothes. </span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+              <span class="question-title">What is the difference between gi and no-gi Brazilian Jiu-Jitsu?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer2" aria-hidden="true"><span>Gi BJJ involves wearing a traditional uniform, allowing grips on the fabric for control. No-gi BJJ uses athletic wear like rash guards and shorts, emphasizing speed and agility without gripping fabric. Both styles are valuable and we teach both in separate classes. </span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+              <span class="question-title">Can I join BJJ classes if I’ve never trained in martial arts before?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Absolutely! Our fundamentals class is specifically designed for beginners. You'll learn the foundational techniques and principles in a safe, welcoming environment. No prior experience is required.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+              <span class="question-title">What are the benefits of BJJ for kids and teens? </span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>BJJ helps kids and teens build confidence, discipline, and fitness in a fun and supportive atmosphere. It teaches valuable self-defense skills while fostering teamwork, respect, and resilience. Classes are tailored to their age and skill level to ensure a positive experience.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
+              <span class="question-title">How does BJJ improve self-defense skills?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>BJJ equips you with techniques to control and neutralize opponents through leverage, regardless of size or strength. It focuses on practical scenarios like defending against larger attackers, making it an effective self-defense system.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">Is Brazilian Jiu-Jitsu suitable for women?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes, BJJ is excellent for women. It teaches leverage-based techniques that don’t rely on strength, making it ideal for self-defense. Our classes provide a safe and supportive environment for everyone, regardless of gender or fitness level.</span></p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Section - Ready To Join -->
     <section class="ready-to-join-container-outer">
       <div class="ready-to-join-container-inner">
@@ -381,8 +441,8 @@
         </div>
       </div>
     </footer>
-
     <script src="./mobile-nav.js"></script>
     <script src="./animate.js"></script>
+    <script src="./faq.js"></script>
   </body>
 </html>
