Adding Muay thai FAQ's

--- a/muay-thai.html
+++ b/muay-thai.html
@@ -186,7 +186,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the world of Muay Thai at Golden Tiger Academy in Dunboyne. Our skilled instructors provide classes tailored to individuals of all ages and skill levels, from novices to seasoned practitioners. Whether you're a beginner or an advanced student, our classes cater to your needs. Join us to enhance your fitness, learn self-defense techniques, and build confidence in a welcoming environment. Start your Muay Thai journey today at Golden Tiger Academy Dunboyne." />
     <title>Learn Muay Thai Kickboxing Techniques</title>
@@ -324,6 +324,66 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section-container-outer" id="faqs">
+      <h2>FAQ's</h2>
+      <div class="faq-section-container-inner">
+        <ul class="accordion">
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
+              <span class="question-title">What is Muay Thai, and how is it different from other martial arts?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span> Muay Thai, also known as the "Art of Eight Limbs," is a combat sport from Thailand that utilizes punches, kicks, elbows, knees, and clinching techniques. It’s known for its devastating strikes and clinch work, making it one of the most effective striking arts in the world, especially in MMA.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+              <span class="question-title">Can anyone start Muay Thai, even with no experience?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer2" aria-hidden="true"><span>Yes, absolutely! Muay Thai is suitable for people of all skill levels. Whether you’re a complete beginner or have previous martial arts experience, our classes cater to everyone, starting with basic techniques and gradually progressing to more advanced drills and sparring.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+              <span class="question-title">What should I expect in my first Muay Thai class?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>In your first class, you’ll begin with a dynamic warm-up to get your body ready. Then, you'll dive into learning basic techniques such as punches, kicks, elbows, and knees. You’ll also practice with pads and partner drills, all in a safe and supportive environment. The focus is on learning the fundamentals while having fun.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+              <span class="question-title">Do I need to be in great shape to start Muay Thai?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>Not at all! Muay Thai is a fantastic way to improve your fitness. While you’ll get a great workout, our classes are designed to accommodate all fitness levels. As you train, you’ll naturally build strength, cardiovascular endurance, and overall fitness.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
+              <span class="question-title"> How often should I train in Muay Thai?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>For beginners, training 1-2 times per week is ideal. This frequency will help you develop solid technique and improve your fitness over time. As you progress, you can increase the number of classes depending on your goals.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">Is Muay Thai good for self-defense?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes! Muay Thai is one of the most effective striking arts for self-defense. It teaches you how to use your body’s natural weapons, including fists, elbows, knees, and legs, to defend yourself in real-life situations. Additionally, you’ll learn effective clinch work to control and neutralize opponents.</span></p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Section - Ready To Join -->
     <section class="ready-to-join-container-outer">
       <div class="ready-to-join-container-inner">
@@ -378,5 +438,6 @@
 
     <script src="./mobile-nav.js"></script>
     <script src="./animate.js"></script>
+    <script src="./faq.js"></script>
   </body>
 </html>
