Adding FAQs section to karate  / kickboxing / korean kickboxing

--- a/karate.html
+++ b/karate.html
@@ -186,7 +186,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Karate at Golden Tiger Academy in Dunboyne. Our experienced instructors offer classes suitable for individuals of all ages and skill levels, whether you're taking your first steps or refining advanced techniques. With a focus on personalized instruction, our classes cater to the unique needs of each student. Join us to improve your fitness, master self-defense skills, and gain confidence in a supportive atmosphere. Begin your Karate journey today at Golden Tiger Academy Dunboyne." />
     <title>Beginner to Advanced Karate Lessons</title>
@@ -323,6 +323,66 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section-container-outer" id="faqs">
+      <h2>FAQ's</h2>
+      <div class="faq-section-container-inner">
+        <ul class="accordion">
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
+              <span class="question-title">What is Kenpo Karate, and how is it different from other martial arts?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span>Kenpo Karate is a dynamic martial art blending Japanese and Chinese traditions. It emphasizes rapid strikes, fluid movement, and effective counterattacks. Unlike many martial arts, Kenpo focuses on practical self-defense techniques that can be adapted for modern-day scenarios, including MMA. Its versatility makes it stand out as a highly effective system for all skill levels.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+              <span class="question-title">Is Kenpo Karate suitable for beginners?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer2" aria-hidden="true"><span>Yes! Kenpo Karate is designed for all experience levels, from complete beginners to advanced practitioners. Whether you're looking to learn self-defense, improve fitness, or develop discipline, our classes provide a supportive environment to help you get started.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+              <span class="question-title">What are the benefits of learning Kenpo Karate?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kenpo Karate offers a wide range of benefits. It provides practical self-defense techniques for real-life situations, improves overall fitness by enhancing cardiovascular health, strength, flexibility, and coordination, and helps develop mental discipline, focus, and stress management skills. Additionally, Kenpo Karate fosters a strong sense of community, where students build friendships and encourage one another on their martial arts journey.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+              <span class="question-title">What should I expect in a Kenpo Karate class?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>Classes begin with a warm-up to prepare your body, followed by drills focused on strikes, blocks, and movement techniques. You’ll also practice forms (katas) and engage in partner exercises or sparring, depending on your level. Each class ends with a cool-down and reflections on the techniques learned. </span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
+              <span class="question-title">Is Kenpo Karate good for self-defense?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Absolutely! Kenpo Karate is designed with practicality in mind. It teaches you how to defend yourself using precise strikes, efficient counterattacks, and situational awareness. Its techniques are effective for various real-world scenarios, making it an excellent choice for self-defense.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">Can children and teens learn Kenpo Karate?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes! We offer tailored classes for kids (ages 5-12) and teens (ages 13-17). These sessions focus on building confidence, discipline, and physical fitness through engaging activities and expert guidance. Classes are structured to be both educational and fun, ensuring a positive experience for younger students.</span></p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Section - Ready To Join -->
     <section class="ready-to-join-container-outer">
       <div class="ready-to-join-container-inner">
@@ -377,5 +437,6 @@
 
     <script src="./mobile-nav.js"></script>
     <script src="./animate.js"></script>
+    <script src="./faq.js"></script>
   </body>
 </html>
