--- a/kickboxing.html
+++ b/kickboxing.html
@@ -186,7 +186,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Elevate your fitness game with exhilarating kickboxing classes at Golden Tiger Academy in Dunboyne. From beginners to seasoned athletes, our dynamic sessions cater to all skill levels, blending technique, strength, and cardio for a full-body workout. Join our supportive community and unleash your potential with kickboxing." />
     <title>Learn Kickboxing Techniques from Experts</title>
@@ -314,6 +314,66 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section-container-outer" id="faqs">
+      <h2>FAQ's</h2>
+      <div class="faq-section-container-inner">
+        <ul class="accordion">
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
+              <span class="question-title">What is Kickboxing, and how is it different from other martial arts?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span>Kickboxing is a striking-focused martial art combining powerful kicks, punches, and knee strikes into a dynamic system of offense and defense. Unlike grappling arts, kickboxing emphasizes stand-up techniques and delivers high-intensity workouts that improve strength, speed, and agility. Its unique blend of martial arts and fitness makes it ideal for both competitive sports and personal development.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+              <span class="question-title">Is Kickboxing suitable for beginners?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer2" aria-hidden="true"><span>Yes! Kickboxing is a versatile martial art suitable for all levels, including beginners. Classes at Golden Tiger Academy are designed to gradually introduce techniques, helping newcomers build confidence and skills at their own pace.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+              <span class="question-title">What are the benefits of learning Kickboxing?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kickboxing provides a comprehensive workout that improves cardiovascular health, strength, and flexibility. It also enhances mental focus, discipline, and stress management while teaching effective self-defense techniques. The supportive environment of kickboxing classes fosters camaraderie, making it a holistic experience for physical and mental wellness.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+              <span class="question-title">What should I expect in a Kickboxing class?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>Kickboxing classes typically start with a warm-up to prepare your body for training. You’ll practice fundamental techniques such as punches, kicks, and combinations through pad work, shadowboxing, or partner drills. Classes may include sparring for advanced participants and end with a cool-down or conditioning exercises.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
+              <span class="question-title">Is Kickboxing effective for self-defense?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes! Kickboxing equips you with practical skills for defending yourself in real-world situations. The striking techniques, combined with improved reflexes and situational awareness, make it an effective martial art for personal safety.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">Can children and teens learn Kickboxing?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>Absolutely! Our Wednesday kickboxing classes are specifically designed for kids and teens. With exciting games and activities, these sessions are not only fun but also help young participants develop discipline, confidence, and essential life skills under the guidance of Ken Byrne, a 3rd-degree black belt. </span></p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Section - Ready To Join -->
     <section class="ready-to-join-container-outer">
       <div class="ready-to-join-container-inner">
@@ -368,5 +428,6 @@
 
     <script src="./mobile-nav.js"></script>
     <script src="./animate.js"></script>
+    <script src="./faq.js"></script>
   </body>
 </html>
