--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -186,7 +186,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the exhilarating world of Korean Kickboxing at Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt, our classes offer a unique blend of Korean Kickboxing techniques tailored for young warriors. Join us to empower your kids with confidence, dynamic techniques, and the energy of Korean Kickboxing!" />
     <title>Korean Kickboxing Classes for Kids: Fun & Fitness</title>
@@ -314,6 +314,66 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section-container-outer" id="faqs">
+      <h2>FAQ's</h2>
+      <div class="faq-section-container-inner">
+        <ul class="accordion">
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
+              <span class="question-title"> What is Korean Kickboxing?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span>Korean Kickboxing is a versatile martial art blending influences from Won Hwa Do, Taekwondo, and traditional kickboxing. It emphasizes fast, precise kicks and strategic footwork, making it an effective discipline for both self-defense and competitive sparring.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+              <span class="question-title">What makes Korean Kickboxing unique?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer2" aria-hidden="true"><span>The unique blend of martial arts influences gives Korean Kickboxing its distinctive focus on dynamic kicks, fluid movements, and practical techniques. It combines the power of kickboxing with the agility of Taekwondo and the adaptability of Won Hwa Do.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+              <span class="question-title">Is Korean Kickboxing suitable for beginners?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Yes! Korean Kickboxing is ideal for beginners, as classes at Golden Tiger Academy focus on building foundational skills, physical fitness, and confidence in a supportive environment.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+              <span class="question-title">What are the benefits of learning Korean Kickboxing?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>Korean Kickboxing improves strength, cardiovascular fitness, flexibility, and coordination. It also builds mental resilience, focus, and discipline while teaching practical self-defense techniques that are applicable in real-life situations.</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
+              <span class="question-title">What should I expect in a Korean Kickboxing class?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Classes include warm-ups, drills focusing on kicks and footwork, and sparring practice for more experienced students. The sessions are designed to be engaging and challenging, catering to all experience levels.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">Are the classes suitable for kids?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>Yes! Golden Tiger Academy offers Korean Kickboxing classes for kids, focusing on fun, fitness, and skill-building. Through warm-ups, techniques, and sparring, children develop confidence, discipline, and self-defense skills.</span></p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Section - Ready To Join -->
     <section class="ready-to-join-container-outer">
       <div class="ready-to-join-container-inner">
@@ -368,5 +428,6 @@
 
     <script src="./mobile-nav.js"></script>
     <script src="./animate.js"></script>
+    <script src="./faq.js"></script>
   </body>
 </html>
