--- a/index.html
+++ b/index.html
@@ -175,6 +175,40 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema Markup Start -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Golden Tiger Academy",
+        "image": "https://goldentigeracademy.com/apple-touch-icon.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Unit 10, Dunboyne Business Park",
+          "addressLocality": "Dunboyne",
+          "addressRegion": "Co. Meath",
+          "postalCode": "A86 WR26",
+          "addressCountry": "IE"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 53.406,
+          "longitude": -6.475
+        },
+        "telephone": "+353 87 233 3481",
+        "url": "https://goldentigeracademy.com/",
+        "openingHours": [
+          "Mo 18:00-21:00",
+          "Tu 18:00-21:00",
+          "We 17:00-21:00",
+          "Th 18:00-21:00",
+          "Sa 09:30-14:00"
+        ],
+        "priceRange": "$$"
+      }
+    </script>
+    <!-- Schema Markup End -->
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/" />
